src/parser/ParDebug.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParDebug.y
-----------------------------------------------------------------------------

state 157 contains 1 shift/reduce conflicts.
state 181 contains 1 shift/reduce conflicts.
state 232 contains 1 shift/reduce conflicts.

terminal '++' is unused
terminal '--' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDecl -> Decl                               (1)
	%start_pVDecl -> VDecl                             (2)
	%start_pCDecl -> CDecl                             (3)
	%start_pBlock -> Block                             (4)
	%start_pStm -> Stm                                 (5)
	%start_pRange -> Range                             (6)
	%start_pLExp -> LExp                               (7)
	%start_pRExp -> RExp                               (8)
	%start_pPRead -> PRead                             (9)
	%start_pPWrite -> PWrite                           (10)
	%start_pLiteral -> Literal                         (11)
	%start_pListForm -> ListForm                       (12)
	%start_pListDecl -> ListDecl                       (13)
	%start_pListVDecl -> ListVDecl                     (14)
	%start_pListCDecl -> ListCDecl                     (15)
	%start_pListStm -> ListStm                         (16)
	%start_pListRExp -> ListRExp                       (17)
	Ident -> L_ident                                   (18)
	Char -> L_charac                                   (19)
	Integer -> L_integ                                 (20)
	Double -> L_doubl                                  (21)
	String -> L_quoted                                 (22)
	Program -> ListDecl                                (23)
	Decl -> 'proc' Ident '(' ListForm ')' Intent ':' Type Block   (24)
	Decl -> 'var' ListVDecl ';'                        (25)
	Decl -> 'param' ListCDecl ';'                      (26)
	Form -> Intent Ident ':' Type                      (27)
	Intent ->                                          (28)
	Intent -> 'in'                                     (29)
	Intent -> 'out'                                    (30)
	Intent -> 'inout'                                  (31)
	Intent -> 'ref'                                    (32)
	Intent -> 'const' 'in'                             (33)
	Intent -> 'const' 'ref'                            (34)
	VDecl -> Ident ':' Type                            (35)
	VDecl -> Ident ':' Type '=' RExp                   (36)
	CDecl -> Ident ':' Type '=' RExp                   (37)
	Type -> Compound Basic                             (38)
	Compound ->                                        (39)
	Compound -> Compound '[' RExp ']'                  (40)
	Compound -> Compound '*'                           (41)
	Basic -> 'bool'                                    (42)
	Basic -> 'char'                                    (43)
	Basic -> 'int'                                     (44)
	Basic -> 'real'                                    (45)
	Basic -> 'string'                                  (46)
	Basic -> 'void'                                    (47)
	Block -> '{' '}'                                   (48)
	Block -> '{' ListDecl '}'                          (49)
	Block -> '{' ListStm '}'                           (50)
	Block -> '{' ListDecl ListStm '}'                  (51)
	Stm -> ';' Stm                                     (52)
	Stm -> Block                                       (53)
	Stm -> Ident '(' ListRExp ')' ';'                  (54)
	Stm -> PWrite '(' RExp ')' ';'                     (55)
	Stm -> LExp '=' RExp ';'                           (56)
	Stm -> LExp '+=' RExp ';'                          (57)
	Stm -> LExp '-=' RExp ';'                          (58)
	Stm -> LExp '*=' RExp ';'                          (59)
	Stm -> LExp '/=' RExp ';'                          (60)
	Stm -> LExp '%=' RExp ';'                          (61)
	Stm -> LExp '^=' RExp ';'                          (62)
	Stm -> LExp ';'                                    (63)
	Stm -> 'if' RExp 'then' Stm                        (64)
	Stm -> 'if' RExp Block                             (65)
	Stm -> 'if' RExp 'then' Stm 'else' Stm             (66)
	Stm -> 'if' RExp Block 'else' Stm                  (67)
	Stm -> 'while' RExp 'do' Stm                       (68)
	Stm -> 'while' RExp Block                          (69)
	Stm -> 'do' Stm 'while' RExp ';'                   (70)
	Stm -> 'for' Ident 'in' Range 'do' Stm             (71)
	Stm -> 'for' Ident 'in' Range Block                (72)
	Stm -> 'return' ';'                                (73)
	Stm -> 'return' RExp ';'                           (74)
	Stm -> 'break' ';'                                 (75)
	Stm -> 'continue' ';'                              (76)
	Range -> '{' RExp '..' RExp '}'                    (77)
	LExp -> '*' LExp                                   (78)
	LExp -> LExp '[' RExp ']'                          (79)
	LExp -> Ident                                      (80)
	LExp -> '(' LExp ')'                               (81)
	RExp -> RExp '||' RExp                             (82)
	RExp -> RExp '&&' RExp                             (83)
	RExp -> '!' RExp                                   (84)
	RExp -> RExp '<' RExp                              (85)
	RExp -> RExp '<=' RExp                             (86)
	RExp -> RExp '==' RExp                             (87)
	RExp -> RExp '!=' RExp                             (88)
	RExp -> RExp '>=' RExp                             (89)
	RExp -> RExp '>' RExp                              (90)
	RExp -> RExp '+' RExp                              (91)
	RExp -> RExp '-' RExp                              (92)
	RExp -> RExp '*' RExp                              (93)
	RExp -> RExp '/' RExp                              (94)
	RExp -> RExp '%' RExp                              (95)
	RExp -> RExp '^' RExp                              (96)
	RExp -> '+' RExp                                   (97)
	RExp -> '-' RExp                                   (98)
	RExp -> '&' LExp                                   (99)
	RExp -> LExp                                       (100)
	RExp -> '[' ListRExp ']'                           (101)
	RExp -> Ident '(' ListRExp ')'                     (102)
	RExp -> PRead '(' ')'                              (103)
	RExp -> Literal                                    (104)
	RExp -> '(' RExp ')'                               (105)
	PRead -> 'readChar'                                (106)
	PRead -> 'readInt'                                 (107)
	PRead -> 'readReal'                                (108)
	PRead -> 'readString'                              (109)
	PWrite -> 'writeChar'                              (110)
	PWrite -> 'writeInt'                               (111)
	PWrite -> 'writeReal'                              (112)
	PWrite -> 'writeString'                            (113)
	Literal -> 'false'                                 (114)
	Literal -> 'true'                                  (115)
	Literal -> Char                                    (116)
	Literal -> Integer                                 (117)
	Literal -> Double                                  (118)
	Literal -> String                                  (119)
	ListForm ->                                        (120)
	ListForm -> Form                                   (121)
	ListForm -> Form ',' ListForm                      (122)
	ListDecl -> Decl                                   (123)
	ListDecl -> Decl ListDecl                          (124)
	ListVDecl -> VDecl                                 (125)
	ListVDecl -> VDecl ',' ListVDecl                   (126)
	ListCDecl -> CDecl                                 (127)
	ListCDecl -> CDecl ',' ListCDecl                   (128)
	ListStm -> Stm                                     (129)
	ListStm -> Stm ListStm                             (130)
	ListRExp ->                                        (131)
	ListRExp -> RExp                                   (132)
	ListRExp -> RExp ',' ListRExp                      (133)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'..'           { PT _ (TS _ 18) }
	'/'            { PT _ (TS _ 19) }
	'/='           { PT _ (TS _ 20) }
	':'            { PT _ (TS _ 21) }
	';'            { PT _ (TS _ 22) }
	'<'            { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'^'            { PT _ (TS _ 31) }
	'^='           { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'break'        { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'const'        { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'do'           { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'false'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'in'           { PT _ (TS _ 43) }
	'inout'        { PT _ (TS _ 44) }
	'int'          { PT _ (TS _ 45) }
	'out'          { PT _ (TS _ 46) }
	'param'        { PT _ (TS _ 47) }
	'proc'         { PT _ (TS _ 48) }
	'readChar'     { PT _ (TS _ 49) }
	'readReal'     { PT _ (TS _ 50) }
	'readInt'      { PT _ (TS _ 51) }
	'readString'   { PT _ (TS _ 52) }
	'real'         { PT _ (TS _ 53) }
	'ref'          { PT _ (TS _ 54) }
	'return'       { PT _ (TS _ 55) }
	'string'       { PT _ (TS _ 56) }
	'then'         { PT _ (TS _ 57) }
	'true'         { PT _ (TS _ 58) }
	'var'          { PT _ (TS _ 59) }
	'void'         { PT _ (TS _ 60) }
	'while'        { PT _ (TS _ 61) }
	'writeChar'    { PT _ (TS _ 62) }
	'writeReal'    { PT _ (TS _ 63) }
	'writeInt'     { PT _ (TS _ 64) }
	'writeString'  { PT _ (TS _ 65) }
	'{'            { PT _ (TS _ 66) }
	'||'           { PT _ (TS _ 67) }
	'}'            { PT _ (TS _ 68) }
	L_ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_integ        { PT _ (TI _) }
	L_doubl        { PT _ (TD _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDecl    rule  1
	%start_pVDecl   rule  2
	%start_pCDecl   rule  3
	%start_pBlock   rule  4
	%start_pStm     rule  5
	%start_pRange   rule  6
	%start_pLExp    rule  7
	%start_pRExp    rule  8
	%start_pPRead   rule  9
	%start_pPWrite  rule  10
	%start_pLiteral rule  11
	%start_pListForm rule  12
	%start_pListDecl rule  13
	%start_pListVDecl rule  14
	%start_pListCDecl rule  15
	%start_pListStm rule  16
	%start_pListRExp rule  17
	Ident           rule  18
	Char            rule  19
	Integer         rule  20
	Double          rule  21
	String          rule  22
	Program         rule  23
	Decl            rules 24, 25, 26
	Form            rule  27
	Intent          rules 28, 29, 30, 31, 32, 33, 34
	VDecl           rules 35, 36
	CDecl           rule  37
	Type            rule  38
	Compound        rules 39, 40, 41
	Basic           rules 42, 43, 44, 45, 46, 47
	Block           rules 48, 49, 50, 51
	Stm             rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76
	Range           rule  77
	LExp            rules 78, 79, 80, 81
	RExp            rules 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105
	PRead           rules 106, 107, 108, 109
	PWrite          rules 110, 111, 112, 113
	Literal         rules 114, 115, 116, 117, 118, 119
	ListForm        rules 120, 121, 122
	ListDecl        rules 123, 124
	ListVDecl       rules 125, 126
	ListCDecl       rules 127, 128
	ListStm         rules 129, 130
	ListRExp        rules 131, 132, 133

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'param'        shift, and enter state 75
	'proc'         shift, and enter state 76
	'var'          shift, and enter state 77

	Program        goto state 99
	Decl           goto state 73
	ListDecl       goto state 100

State 1


	'param'        shift, and enter state 75
	'proc'         shift, and enter state 76
	'var'          shift, and enter state 77

	Decl           goto state 98

State 2


	L_ident        shift, and enter state 19

	Ident          goto state 70
	VDecl          goto state 97

State 3


	L_ident        shift, and enter state 19

	Ident          goto state 67
	CDecl          goto state 96

State 4


	'{'            shift, and enter state 66

	Block          goto state 95

State 5


	'('            shift, and enter state 53
	'*'            shift, and enter state 33
	';'            shift, and enter state 54
	'break'        shift, and enter state 55
	'continue'     shift, and enter state 56
	'do'           shift, and enter state 57
	'for'          shift, and enter state 58
	'if'           shift, and enter state 59
	'return'       shift, and enter state 60
	'while'        shift, and enter state 61
	'writeChar'    shift, and enter state 62
	'writeReal'    shift, and enter state 63
	'writeInt'     shift, and enter state 64
	'writeString'  shift, and enter state 65
	'{'            shift, and enter state 66
	L_ident        shift, and enter state 19

	Ident          goto state 47
	Block          goto state 48
	Stm            goto state 94
	LExp           goto state 50
	PWrite         goto state 51

State 6


	'{'            shift, and enter state 93

	Range          goto state 92

State 7


	'('            shift, and enter state 53
	'*'            shift, and enter state 33
	L_ident        shift, and enter state 19

	Ident          goto state 90
	LExp           goto state 91

State 8


	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 89
	PRead          goto state 27
	Literal        goto state 28

State 9


	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41

	PRead          goto state 88

State 10


	'writeChar'    shift, and enter state 62
	'writeReal'    shift, and enter state 63
	'writeInt'     shift, and enter state 64
	'writeString'  shift, and enter state 65

	PWrite         goto state 87

State 11


	'false'        shift, and enter state 37
	'true'         shift, and enter state 42
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	Literal        goto state 86

State 12


	'const'        shift, and enter state 81
	'in'           shift, and enter state 82
	'inout'        shift, and enter state 83
	'out'          shift, and enter state 84
	'ref'          shift, and enter state 85
	L_ident        reduce using rule 28
	%eof           reduce using rule 120

	Form           goto state 78
	Intent         goto state 79
	ListForm       goto state 80

State 13


	'param'        shift, and enter state 75
	'proc'         shift, and enter state 76
	'var'          shift, and enter state 77

	Decl           goto state 73
	ListDecl       goto state 74

State 14


	L_ident        shift, and enter state 19

	Ident          goto state 70
	VDecl          goto state 71
	ListVDecl      goto state 72

State 15


	L_ident        shift, and enter state 19

	Ident          goto state 67
	CDecl          goto state 68
	ListCDecl      goto state 69

State 16


	'('            shift, and enter state 53
	'*'            shift, and enter state 33
	';'            shift, and enter state 54
	'break'        shift, and enter state 55
	'continue'     shift, and enter state 56
	'do'           shift, and enter state 57
	'for'          shift, and enter state 58
	'if'           shift, and enter state 59
	'return'       shift, and enter state 60
	'while'        shift, and enter state 61
	'writeChar'    shift, and enter state 62
	'writeReal'    shift, and enter state 63
	'writeInt'     shift, and enter state 64
	'writeString'  shift, and enter state 65
	'{'            shift, and enter state 66
	L_ident        shift, and enter state 19

	Ident          goto state 47
	Block          goto state 48
	Stm            goto state 49
	LExp           goto state 50
	PWrite         goto state 51
	ListStm        goto state 52

State 17


	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46
	%eof           reduce using rule 131

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 26
	PRead          goto state 27
	Literal        goto state 28
	ListRExp       goto state 29

State 18


	L_ident        shift, and enter state 19


State 19

	Ident -> L_ident .                                  (rule 18)

	'!='           reduce using rule 18
	'%'            reduce using rule 18
	'%='           reduce using rule 18
	'&&'           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	'*='           reduce using rule 18
	'+'            reduce using rule 18
	'+='           reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'-='           reduce using rule 18
	'..'           reduce using rule 18
	'/'            reduce using rule 18
	'/='           reduce using rule 18
	':'            reduce using rule 18
	';'            reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'='            reduce using rule 18
	'=='           reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	'^'            reduce using rule 18
	'^='           reduce using rule 18
	'do'           reduce using rule 18
	'in'           reduce using rule 18
	'then'         reduce using rule 18
	'{'            reduce using rule 18
	'||'           reduce using rule 18
	'}'            reduce using rule 18
	%eof           reduce using rule 18


State 20

	LExp -> Ident .                                     (rule 80)
	RExp -> Ident . '(' ListRExp ')'                    (rule 102)

	'!='           reduce using rule 80
	'%'            reduce using rule 80
	'&&'           reduce using rule 80
	'('            shift, and enter state 163
	')'            reduce using rule 80
	'*'            reduce using rule 80
	'+'            reduce using rule 80
	','            reduce using rule 80
	'-'            reduce using rule 80
	'..'           reduce using rule 80
	'/'            reduce using rule 80
	';'            reduce using rule 80
	'<'            reduce using rule 80
	'<='           reduce using rule 80
	'=='           reduce using rule 80
	'>'            reduce using rule 80
	'>='           reduce using rule 80
	'['            reduce using rule 80
	']'            reduce using rule 80
	'^'            reduce using rule 80
	'do'           reduce using rule 80
	'then'         reduce using rule 80
	'{'            reduce using rule 80
	'||'           reduce using rule 80
	'}'            reduce using rule 80
	%eof           reduce using rule 80


State 21

	Literal -> Char .                                   (rule 116)

	'!='           reduce using rule 116
	'%'            reduce using rule 116
	'&&'           reduce using rule 116
	')'            reduce using rule 116
	'*'            reduce using rule 116
	'+'            reduce using rule 116
	','            reduce using rule 116
	'-'            reduce using rule 116
	'..'           reduce using rule 116
	'/'            reduce using rule 116
	';'            reduce using rule 116
	'<'            reduce using rule 116
	'<='           reduce using rule 116
	'=='           reduce using rule 116
	'>'            reduce using rule 116
	'>='           reduce using rule 116
	']'            reduce using rule 116
	'^'            reduce using rule 116
	'do'           reduce using rule 116
	'then'         reduce using rule 116
	'{'            reduce using rule 116
	'||'           reduce using rule 116
	'}'            reduce using rule 116
	%eof           reduce using rule 116


State 22

	Literal -> Integer .                                (rule 117)

	'!='           reduce using rule 117
	'%'            reduce using rule 117
	'&&'           reduce using rule 117
	')'            reduce using rule 117
	'*'            reduce using rule 117
	'+'            reduce using rule 117
	','            reduce using rule 117
	'-'            reduce using rule 117
	'..'           reduce using rule 117
	'/'            reduce using rule 117
	';'            reduce using rule 117
	'<'            reduce using rule 117
	'<='           reduce using rule 117
	'=='           reduce using rule 117
	'>'            reduce using rule 117
	'>='           reduce using rule 117
	']'            reduce using rule 117
	'^'            reduce using rule 117
	'do'           reduce using rule 117
	'then'         reduce using rule 117
	'{'            reduce using rule 117
	'||'           reduce using rule 117
	'}'            reduce using rule 117
	%eof           reduce using rule 117


State 23

	Literal -> Double .                                 (rule 118)

	'!='           reduce using rule 118
	'%'            reduce using rule 118
	'&&'           reduce using rule 118
	')'            reduce using rule 118
	'*'            reduce using rule 118
	'+'            reduce using rule 118
	','            reduce using rule 118
	'-'            reduce using rule 118
	'..'           reduce using rule 118
	'/'            reduce using rule 118
	';'            reduce using rule 118
	'<'            reduce using rule 118
	'<='           reduce using rule 118
	'=='           reduce using rule 118
	'>'            reduce using rule 118
	'>='           reduce using rule 118
	']'            reduce using rule 118
	'^'            reduce using rule 118
	'do'           reduce using rule 118
	'then'         reduce using rule 118
	'{'            reduce using rule 118
	'||'           reduce using rule 118
	'}'            reduce using rule 118
	%eof           reduce using rule 118


State 24

	Literal -> String .                                 (rule 119)

	'!='           reduce using rule 119
	'%'            reduce using rule 119
	'&&'           reduce using rule 119
	')'            reduce using rule 119
	'*'            reduce using rule 119
	'+'            reduce using rule 119
	','            reduce using rule 119
	'-'            reduce using rule 119
	'..'           reduce using rule 119
	'/'            reduce using rule 119
	';'            reduce using rule 119
	'<'            reduce using rule 119
	'<='           reduce using rule 119
	'=='           reduce using rule 119
	'>'            reduce using rule 119
	'>='           reduce using rule 119
	']'            reduce using rule 119
	'^'            reduce using rule 119
	'do'           reduce using rule 119
	'then'         reduce using rule 119
	'{'            reduce using rule 119
	'||'           reduce using rule 119
	'}'            reduce using rule 119
	%eof           reduce using rule 119


State 25

	LExp -> LExp . '[' RExp ']'                         (rule 79)
	RExp -> LExp .                                      (rule 100)

	'!='           reduce using rule 100
	'%'            reduce using rule 100
	'&&'           reduce using rule 100
	')'            reduce using rule 100
	'*'            reduce using rule 100
	'+'            reduce using rule 100
	','            reduce using rule 100
	'-'            reduce using rule 100
	'..'           reduce using rule 100
	'/'            reduce using rule 100
	';'            reduce using rule 100
	'<'            reduce using rule 100
	'<='           reduce using rule 100
	'=='           reduce using rule 100
	'>'            reduce using rule 100
	'>='           reduce using rule 100
	'['            shift, and enter state 102
	']'            reduce using rule 100
	'^'            reduce using rule 100
	'do'           reduce using rule 100
	'then'         reduce using rule 100
	'{'            reduce using rule 100
	'||'           reduce using rule 100
	'}'            reduce using rule 100
	%eof           reduce using rule 100


State 26

	RExp -> RExp . '||' RExp                            (rule 82)
	RExp -> RExp . '&&' RExp                            (rule 83)
	RExp -> RExp . '<' RExp                             (rule 85)
	RExp -> RExp . '<=' RExp                            (rule 86)
	RExp -> RExp . '==' RExp                            (rule 87)
	RExp -> RExp . '!=' RExp                            (rule 88)
	RExp -> RExp . '>=' RExp                            (rule 89)
	RExp -> RExp . '>' RExp                             (rule 90)
	RExp -> RExp . '+' RExp                             (rule 91)
	RExp -> RExp . '-' RExp                             (rule 92)
	RExp -> RExp . '*' RExp                             (rule 93)
	RExp -> RExp . '/' RExp                             (rule 94)
	RExp -> RExp . '%' RExp                             (rule 95)
	RExp -> RExp . '^' RExp                             (rule 96)
	ListRExp -> RExp .                                  (rule 132)
	ListRExp -> RExp . ',' ListRExp                     (rule 133)

	'!='           shift, and enter state 103
	'%'            shift, and enter state 104
	'&&'           shift, and enter state 105
	')'            reduce using rule 132
	'*'            shift, and enter state 106
	'+'            shift, and enter state 107
	','            shift, and enter state 162
	'-'            shift, and enter state 108
	'/'            shift, and enter state 109
	'<'            shift, and enter state 110
	'<='           shift, and enter state 111
	'=='           shift, and enter state 112
	'>'            shift, and enter state 113
	'>='           shift, and enter state 114
	']'            reduce using rule 132
	'^'            shift, and enter state 115
	'||'           shift, and enter state 116
	%eof           reduce using rule 132


State 27

	RExp -> PRead . '(' ')'                             (rule 103)

	'('            shift, and enter state 161


State 28

	RExp -> Literal .                                   (rule 104)

	'!='           reduce using rule 104
	'%'            reduce using rule 104
	'&&'           reduce using rule 104
	')'            reduce using rule 104
	'*'            reduce using rule 104
	'+'            reduce using rule 104
	','            reduce using rule 104
	'-'            reduce using rule 104
	'..'           reduce using rule 104
	'/'            reduce using rule 104
	';'            reduce using rule 104
	'<'            reduce using rule 104
	'<='           reduce using rule 104
	'=='           reduce using rule 104
	'>'            reduce using rule 104
	'>='           reduce using rule 104
	']'            reduce using rule 104
	'^'            reduce using rule 104
	'do'           reduce using rule 104
	'then'         reduce using rule 104
	'{'            reduce using rule 104
	'||'           reduce using rule 104
	'}'            reduce using rule 104
	%eof           reduce using rule 104


State 29

	%start_pListRExp -> ListRExp .                      (rule 17)

	%eof           accept


State 30

	RExp -> '!' . RExp                                  (rule 84)

	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 160
	PRead          goto state 27
	Literal        goto state 28

State 31

	RExp -> '&' . LExp                                  (rule 99)

	'('            shift, and enter state 53
	'*'            shift, and enter state 33
	L_ident        shift, and enter state 19

	Ident          goto state 90
	LExp           goto state 159

State 32

	LExp -> '(' . LExp ')'                              (rule 81)
	RExp -> '(' . RExp ')'                              (rule 105)

	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 157
	RExp           goto state 158
	PRead          goto state 27
	Literal        goto state 28

State 33

	LExp -> '*' . LExp                                  (rule 78)

	'('            shift, and enter state 53
	'*'            shift, and enter state 33
	L_ident        shift, and enter state 19

	Ident          goto state 90
	LExp           goto state 156

State 34

	RExp -> '+' . RExp                                  (rule 97)

	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 155
	PRead          goto state 27
	Literal        goto state 28

State 35

	RExp -> '-' . RExp                                  (rule 98)

	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 154
	PRead          goto state 27
	Literal        goto state 28

State 36

	RExp -> '[' . ListRExp ']'                          (rule 101)

	'!'            shift, and enter state 30
	'&'            shift, and enter state 31
	'('            shift, and enter state 32
	'*'            shift, and enter state 33
	'+'            shift, and enter state 34
	'-'            shift, and enter state 35
	'['            shift, and enter state 36
	']'            reduce using rule 131
	'false'        shift, and enter state 37
	'readChar'     shift, and enter state 38
	'readReal'     shift, and enter state 39
	'readInt'      shift, and enter state 40
	'readString'   shift, and enter state 41
	'true'         shift, and enter state 42
	L_ident        shift, and enter state 19
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_doubl        shift, and enter state 45
	L_quoted       shift, and enter state 46

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	LExp           goto state 25
	RExp           goto state 26
	PRead          goto state 27
	Literal        goto state 28
	ListRExp       goto state 153

State 37

	Literal -> 'false' .                                (rule 114)

	'!='           reduce using rule 114
	'%'            reduce using rule 114
	'&&'           reduce using rule 114
	')'            reduce using rule 114
	'*'            reduce using rule 114
	'+'            reduce using rule 114
	','            reduce using rule 114
	'-'            reduce using rule 114
	'..'           reduce using rule 114
	'/'            reduce using rule 114
	';'            reduce using rule 114
	'<'            reduce using rule 114
	'<='           reduce using rule 114
	'=='           reduce using rule 114
	'>'            reduce using rule 114
	'>='           reduce using rule 114
	']'            reduce using rule 114
	'^'            reduce using rule 114
	'do'           reduce using rule 114
	'then'         reduce using rule 114
	'{'            reduce using rule 114
	'||'           reduce using rule 114
	'}'            reduce using rule 114
	%eof           reduce using rule 114


State 38

	PRead -> 'readChar' .                               (rule 106)

	'('            reduce using rule 106
	%eof           reduce using rule 106


State 39

	PRead -> 'readReal' .                               (rule 108)

	'('            reduce using rule 108
	%eof           reduce using rule 108


State 40

	PRead -> 'readInt' .                                (rule 107)

	'('            reduce using rule 107
	%eof           reduce using rule 107


State 41

	PRead -> 'readString' .                             (rule 109)

	'('            reduce using rule 109
	%eof           reduce using rule 109


State 42

	Literal -> 'true' .                                 (rule 115)
